--- a/templates/gemba/display_scrap_in_a_week.html
+++ b/templates/gemba/display_scrap_in_a_week.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>{{ line_name }}: {{ scrap_code }} - {{ scrap_description }} in a W/C {{ monday|date:'d-m-y' }}</h4>
+<h4>{{ line_name }}: {{ scrap_code }} - {{ scrap_description }} in a W/C {{ monday|date:'d/m/Y' }}</h4>
 
 <table class="table table-hover">
         <thead>
@@ -21,7 +21,7 @@
                 <td>{{ object.scrap_rate_1 }}%</td>
                 <td>{{ object.scrap_rate_2 }}%</td>
                 <td>{{ object.job }}</td>
-                <td>{{ object.pareto_date }}</td>
+                <td>{{ object.pareto_date|date:'d/m/Y' }}</td>
             </tr>
         {% endfor %}
         {% for object in total %}
