--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -9,6 +9,10 @@
     </style>
 </head>
 <h4>Scrap rate by week</h4>
+<a href="{% url 'gemba_app:previous-scrap-rate-report' line_id=line_id base_day=totals.start_monday_8 %}">
+    <<<- Previous </a>&nbsp;&nbsp;&nbsp;
+<a href="{% url 'gemba_app:next-scrap-rate-report' line_id=line_id base_day=totals.start_monday_8 %}">
+    Next ->>></a></br></br>
 Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
 
 <table class="mytable">
@@ -68,39 +72,39 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
         {% for object in report %}
             <tr style="font-size:0.7vw;">
                 <th>{{ object.scrap }}</th>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_0 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_0 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_0 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_0 %}">
                     {% if object.qty_0 == 0 %} {% else %} {{ object.qty_0 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_0 == 0 %} {% elif object.scrap_rate_0 > 2 %}
                     <div class="high">{{ object.scrap_rate_0 }}%</div>{% else %}{{ object.scrap_rate_0 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_1 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_1 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_1 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_1 %}">
                     {% if object.qty_1 == 0 %} {% else %} {{ object.qty_1 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_1 == 0 %} {% elif object.scrap_rate_1 > 2 %}
                     <div class="high">{{ object.scrap_rate_1 }}%</div>{% else %}{{ object.scrap_rate_1 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_2 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_2 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_2 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_2 %}">
                     {% if object.qty_2 == 0 %} {% else %} {{ object.qty_2 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_2 == 0 %} {% elif object.scrap_rate_2 > 2 %}
                     <div class="high">{{ object.scrap_rate_2 }}%</div>{% else %}{{ object.scrap_rate_2 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_3 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_3 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_3 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_3 %}">
                     {% if object.qty_3 == 0 %} {% else %} {{ object.qty_3 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_3 == 0 %} {% elif object.scrap_rate_3 > 2 %}
                     <div class="high">{{ object.scrap_rate_3 }}%</div>{% else %}{{ object.scrap_rate_3 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_4 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_4 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_4 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_4 %}">
                     {% if object.qty_4 == 0 %} {% else %} {{ object.qty_4 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_4 == 0 %} {% elif object.scrap_rate_4 > 2 %}
                     <div class="high">{{ object.scrap_rate_4 }}%</div>{% else %}{{ object.scrap_rate_4 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_5 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_5 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_5 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_5 %}">
                     {% if object.qty_5 == 0 %} {% else %} {{ object.qty_5 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_5 == 0 %} {% elif object.scrap_rate_5 > 2 %}
                     <div class="high">{{ object.scrap_rate_5 }}%</div>{% else %}{{ object.scrap_rate_5 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_6 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_6 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_6 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_6 %}">
                     {% if object.qty_6 == 0 %} {% else %} {{ object.qty_6 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_6 == 0 %} {% elif object.scrap_rate_6 > 2 %}
                     <div class="high">{{ object.scrap_rate_6 }}%</div>{% else %}{{ object.scrap_rate_6 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_7 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_7 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_7 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_7 %}">
                     {% if object.qty_7 == 0 %} {% else %} {{ object.qty_7 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_7 == 0 %} {% elif object.scrap_rate_7 > 2 %}
                     <div class="high">{{ object.scrap_rate_7 }}%</div>{% else %}{{ object.scrap_rate_7 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=base_day week_no=object.week_8 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_8 %}">
+                <td><a href="{% url 'gemba_app:display-scrap-in-a-week' line_id=line_id base_day=totals.start_monday_8 week_no=object.week_8 scrap_id=object.scrap_id scrap_rate=object.scrap_rate_8 %}">
                     {% if object.qty_8 == 0 %} {% else %} {{ object.qty_8 }} {% endif %}</a></td>
                 <td>{% if object.scrap_rate_8 == 0 %} {% elif object.scrap_rate_8 > 2 %}
                     <div class="high">{{ object.scrap_rate_8 }}%</div>{% else %}{{ object.scrap_rate_8 }}%{% endif %}</td>
