--- a/templates/gemba/pareto_details_search.html
+++ b/templates/gemba/pareto_details_search.html
@@ -13,6 +13,7 @@
                 <th scope="col">Good</th>
                 <th scope="col">Reworked Good</th>
                 <th scope="col">Scrap</th>
+                <th scope="col">A Time</th>
                 <th scope="col">A</th>
                 <th scope="col">P</th>
                 <th scope="col">Q</th>
@@ -32,6 +33,7 @@
                 <td>{{ object.good }}</td>
                 <td>{{ object.rework }}</td>
                 <td>{{ object.scrap }}</td>
+                <td>{{ object.available_time }}</td>
                 <td>{{ object.availability }}%</td>
                 <td>{{ object.performance }}%</td>
                 <td>{{ object.quality }}%</td>
