Gemba App changes

--- a/templates/gemba/update_database.html
+++ b/templates/gemba/update_database.html
@@ -7,7 +7,7 @@
      <input name="pareto_id" type="text">
      </br>
      </br>
-     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
+     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Update
     </button>
  </form>
 {% endblock %}
