--- a/templates/cost/cost_table_detail.html
+++ b/templates/cost/cost_table_detail.html
@@ -9,7 +9,7 @@
                 <th>Date</th>
                 <th>Description</th>
                 <th>Amount</th>
-                <th>Room</th>
+                <th>Category</th>
             </tr>
             </thead>
             <tbody>
@@ -18,7 +18,7 @@
                 <td>{{ object.cost_date|date:"d.m.Y" }}</td>
                 <td>{{ object.desc }}</td>
                 <td>{{ object.amount }}</td>
-                <td>{{ object.room }}</td>
+                <td>{{ object.cat }}</td>
             </tr>
             </tbody>
         </table>
