--- a/templates/cost/contents.html
+++ b/templates/cost/contents.html
@@ -7,7 +7,7 @@
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add item
     </button></a>
  </h4>
-Total weight: {{ sum_weight}} zł
+Total weight: {{ sum_weight}} kg
   {% endif %}
     <div>
         <table id="table" class="table table-hover">
