--- a/templates/cost/contents_detail.html
+++ b/templates/cost/contents_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h4>CONTENTS</h4>
+<h4>Item</h4>
     <div>
         <table id="table" class="table table-hover">
             <thead>
