--- a/templates/cost/cost_table_detail.html
+++ b/templates/cost/cost_table_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h4>COST</h4>
+<h4>Cost</h4>
     <div>
         <table id="table" class="table table-hover">
             <thead>
