--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -16,6 +16,9 @@
             vertical-align: center;
             text-align: center;
         }
+        .table-bordered{
+            border: 2px solid #261c4a;
+        }
     </style>
 </head>
 
@@ -49,7 +52,6 @@
     </div>
     <div class = "col">
     <p style="text-align: right; font-size:1.5vw; font-weight: bold; text-decoration: underline">{{ pareto_list.line }}</p>
-    <p style="text-align:right"><b>Overall OEE: A - {{ availability }}% / P - {{ performance }}% / Q - {{ quality }}% / OEE - {{ oee }}%</b></p>
     </div>
 </div>
     <br/>
@@ -90,13 +92,7 @@
             <th scope="col" class="central_pos">Scrap</th>
             <th scope="col" class="central_pos">Takt time</th>
             <th scope="col" class="central_pos">OPs</th>
-            <th scope="col" class="central_pos">Last Entry</th>
-            <th scope="col" class="central_pos">A Time</th>
-            <th scope="col" class="central_pos">D Time</th>
-            <th scope="col" class="central_pos">A</th>
-            <th scope="col" class="central_pos">P</th>
-            <th scope="col" class="central_pos">Q</th>
-            <th scope="col" class="central_pos">OEE</th>
+            <th scope="col" class="central_pos">Created</th>
         </tr>
         </thead>
         <tbody>
@@ -121,15 +117,7 @@
             <td class="central_pos">{{ pareto_item.scrap }}</td>
             <td class="central_pos">{{ pareto_item.takt_time }}</td>
             <td class="central_pos">{{ pareto_item.ops }}</td>
-            <td class="central_pos"><a href="{% url 'gemba_app:finished-update-view' pk=pareto_item.id %}">
-                {{ pareto_item.finished|date:"H:i" }}</a></td>
-            <td class="central_pos">{{ pareto_item.available_time }}</td>
-            <td class="central_pos">{{ pareto_item.downtime }}</td>
-            <td class="central_pos">{{ pareto_item.availability }}%</td>
-            <td class="central_pos">{{ pareto_item.performance }}%</td>
-            <td class="central_pos">{{ pareto_item.quality }}%</td>
-            <td class="central_pos">{{ pareto_item.oee }}%</td>
-
+            <td class="central_pos">{{ pareto_item.created|date:"H:i" }}</td>
         </tr>
         {% endfor %}
         <tr>
@@ -147,6 +135,26 @@
         </tbody>
         </table>
         <p>{% if start_meter > 0 %} Start meter = {{ start_meter }}{% endif %}</p>
+    </div>
+    <div class = "col">
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th  scope="col" class="central_pos">OEE: &nbsp;&nbsp;{{ oee }}%</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="central_pos">Availability: &nbsp;{{ availability }}%</td>
+            </tr>
+            <tr>
+                <td class="central_pos">Performance: &nbsp;{{ performance }}%</td>
+            </tr>
+            <tr>
+                <td class="central_pos">Quality: &nbsp;{{ quality }}%</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     </div>
 </div>
